# fast-api-course

./: .gitignore  pyproject.toml
fast_api_course/: app.py  models.py  schemas.py  settings.py
migrations/: env.py
migrations/versions/: 7e140ff1bbe2_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py
