[project]
name = "fast-api-course"
version = "0.1.0"
description = ""
authors = [{ name = "vitordiricio", email = "vitordiricio@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12.1,<4.0"
dependencies = ["fastapi (>=0.115.6,<0.116.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.1"
taskipy = "^1.14.1"


[tool.poetry.group.pytest.dependencies]
pytest-cov = "^6.0.0"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
run = 'fastapi dev fast_api_course/app.py'

pre_test = 'task lint'
test = 'pytest --cov=fast_api_course -vv'
post_test = 'coverage html'

lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'
